# BattleGame

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Army.hpp  Game.hpp  GameInterface.hpp  GameManager.hpp  Movement.hpp  OrderArmy.hpp  Player.hpp  global.h
src/: Army.cpp  Game.cpp  GameManager.cpp  Movement.cpp  OrderArmy.cpp  Player.cpp
